# rs-learn

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  index.html  plugin.json
.claude-plugin/: marketplace.json
.github/workflows/: fetch-rs-search.yml  pages.yml  publish.yml  release.yml  test.yml
.gm/: rs-learn.db
commands/: rs-learn-feedback.md  rs-learn-query.md  rs-learn-status.md
content/pages/: index.yml
docs/: app-shell.css  app.js  colors_and_type.css  index.html  style.css
npm/: README.md  install.js  package.json  postinstall.js
site/content/globals/: site.yaml
site/content/pages/: home.yaml
skills/rs-learn/: SKILL.md
skills/rs-learn/evals/: evals.json
src/: attention.rs  attention_math.rs  attention_tests.rs  db_path.rs  embeddings.rs  errors.rs  export.rs  federated.rs  lib.rs  llm_gate.rs  main.rs  memory.rs  memory_tests.rs  observability.rs  router.rs  router_core.rs  router_persist.rs  router_tests.rs  router_train.rs  rs_search_bridge.rs
src/acp/: mod.rs  proto.rs
src/backend/: claude_cli.rs  mod.rs
src/cache/: mod.rs
src/graph/: communities.rs  edges.rs  entities.rs  http.rs  ingest.rs  llm.rs  mcp.rs  metrics.rs  mod.rs  recipes.rs  sagas.rs  search.rs  text.rs  time.rs  validation.rs
src/graph/prompts/: dedupe_edges.rs  dedupe_nodes.rs  eval.rs  extract_edges.rs  extract_nodes.rs  mod.rs  snippets.rs  summarize_nodes.rs  summarize_sagas.rs
src/learn/: background.rs  deep.rs  deep_tests.rs  instant.rs  instant_io.rs  instant_tests.rs  mod.rs  reasoning_bank.rs  reasoning_bank_tests.rs
src/learn/background/: bg_tests.rs  kmeans.rs  mod.rs  run.rs
src/orchestrator/: hints.rs  mod.rs  pipeline.rs  tests.rs  types.rs
src/simd/: mod.rs
src/spine/: mod.rs
src/store/: mod.rs  read.rs  read_graph.rs  schema.rs  triggers.rs  types.rs  write.rs  write_housekeeping.rs
tests/: graph.rs  integration.rs  spine_cache.rs
