[package]
name = "rs-learn"
version = "0.1.5"
edition = "2021"
authors = ["AnEntrypoint"]
license = "MIT"
description = "Continual-learning orchestrator over any ACP stdio agent: libsql memory, HNSW retrieval, graph attention, FastGRNN routing, three learning loops."
repository = "https://github.com/AnEntrypoint/rs-learn"
homepage = "https://github.com/AnEntrypoint/rs-learn"
readme = "README.md"
keywords = ["acp", "llm", "orchestrator", "libsql", "continual-learning"]
categories = ["command-line-utilities", "science", "asynchronous"]

[lib]
name = "rs_learn"
path = "src/lib.rs"

[[bin]]
name = "rs-learn"
path = "src/main.rs"

[[bin]]
name = "rs-learn-validate"
path = "src/bin/validate.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
blake3 = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
arc-swap = "1"
dashmap = "6"
bytemuck = { version = "1", features = ["derive"] }
async-trait = "0.1"
pulp = "0.19"
moka = { version = "0.12", features = ["future"] }

libsql = { version = "0.9", default-features = false, features = ["core", "serde"] }
agent-client-protocol = "0.11"
safetensors = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"

rs-search = { git = "https://github.com/AnEntrypoint/rs-search", branch = "main", default-features = false, features = ["vector"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
